@@ -1,3 +1,4 @@
+* Renamed ExpressionNode to simply Expression.
 
 * Multithreaded the ImagePlug class.
 
